# iterator

./: countries_list.txt  main.py  pyproject.toml  results.txt
