[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Polina Vinogradova <p.p.vinogradova@yandex.ru>"]
description = ""
name = "iterator"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
wikipedia = "^1.4"
[tool.poetry.dev-dependencies]
